--- a/exelente_ru/css/style.css
+++ b/exelente_ru/css/style.css
@@ -1,3 +1,69 @@
 @import 'common.css';
 @import 'css-blocks/popup-city.css';
 @import 'css-blocks/popup-favorite.css';
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&subset=cyrillic');
+@font-face {
+  font-family: 'Bebas Neue';
+  src: url('../fonts/bebas/TTF\'s/BebasNeue Regular.ttf') format("truetype");
+}
+@font-face {
+  font-family: 'Bebas Neue';
+  src: url('../fonts/bebas/TTF\'s/BebasNeue Bold.ttf') format("truetype");
+  font-weight: bold;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  animation: fade-in 0.5s ease;
+  font-family: 'Open Sans', sans-serif;
+  scroll-behavior: smooth;
+}
+@media (min-width: 577px) {
+  body {
+    min-width: 1180px;
+  }
+}
+@media (max-width: 576px) {
+  body {
+    width: 100%;
+    min-width: unset;
+    padding: 0;
+  }
+}
+@media (min-width: 577px) {
+  .wrapper {
+    width: 1180px;
+    margin: 0 auto;
+    height: 100%;
+  }
+}
+@media (max-width: 576px) {
+  .wrapper {
+    width: 100%;
+    margin: 0 auto;
+    height: 100%;
+  }
+}
+.container {
+  background-color: #ffffff;
+}
+@media (max-width: 576px) {
+  .container {
+    background-color: #f7f7f7;
+  }
+}
+.container__mobile {
+  max-height: 1100px;
+  overflow: hidden;
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
