--- a/exelente_ru/css/content_schools.css
+++ b/exelente_ru/css/content_schools.css
@@ -191,6 +191,7 @@ a {
 	font-weight: bold;
 	font-size: 12px;
 	color: #333333;
+	cursor: pointer;
 }
 
 @media (max-width: 576px) {
@@ -230,7 +231,9 @@ a {
 	transition: 0.5s;
 }
 
-.sidebar__part .sidebar-arrow:active {
+/* Анимация стрелки в JS,недумаю что данные строки нужны */
+
+/* .sidebar__part .sidebar-arrow:active {
 	transform: rotate(180deg);
 	transition: 0.5s;
 }
@@ -243,7 +246,7 @@ a {
 	background-position: -12px 0;
 	background: url(../img/content-img/content_arrows_sidebar.png) no-repeat;
 	transition: 0.5s;
-}
+} */
 
 @media (max-width: 576px) {
 	.sidebar__part .sidebar-arrow {
@@ -255,6 +258,7 @@ a {
 .choose-specialty__checkboxes,
 .choose-country__checkboxes {
 	position: relative;
+	display: none;
 	left: 23px;
 	list-style: none;
 	padding: 0 0 3px 0;
@@ -264,14 +268,22 @@ a {
 	color: #333333;
 }
 
+.choose-country__checkboxes {
+	display: block;
+}
+
 @media (max-width: 576px) {
 	.choose-program__checkboxes,
 	.choose-specialty__checkboxes,
 	.choose-country__checkboxes {
 		position: relative;
+		display: none;
 		left: 2px;
 		padding-bottom: 23px;
 		font-size: 18px;
+	}
+	.choose-country__checkboxes {
+		display: block;
 	}
 }
 
