--- a/exelente_ru/css/css-blocks/popup-favorite.css
+++ b/exelente_ru/css/css-blocks/popup-favorite.css
@@ -1,6 +1,16 @@
 @media (max-width: 576px) {
-  .chosen {
+  .banner-chosen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 67, 145, 0.4);
     display: none;
+    z-index: 198;
+  }
+  .chosen {
+    display: flex;
     position: fixed;
     flex-flow: column nowrap;
     box-sizing: border-box;
@@ -90,8 +100,18 @@
 }
 
 @media (min-width: 577px) {
-  .chosen {
+  .banner-chosen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 67, 145, 0.4);
     display: none;
+    z-index: 100;
+  }
+  .chosen {
+    display: flex;
     position: fixed;
     width: 501.3px;
     height: 325px;
@@ -193,8 +213,18 @@
 /*Добавил стили для корзины/basket*/
 
 @media (max-width: 576px) {
-  .basket {
+  .banner-basket {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 67, 145, 0.4);
     display: none;
+    z-index: 198;
+  }
+  .basket {
+    display: flex;
     position: fixed;
     flex-flow: column nowrap;
     box-sizing: border-box;
@@ -287,8 +317,18 @@
 }
 
 @media (min-width: 577px) {
-  .basket {
+  .banner-basket {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 67, 145, 0.4);
     display: none;
+    z-index: 100;
+  }
+  .basket {
+    display: flex;
     position: fixed;
     width: 501.3px;
     left: 35.33%;
