--- a/exelente_ru/css/header.css
+++ b/exelente_ru/css/header.css
@@ -532,13 +532,22 @@
 }
 .menu-block_from-hidden .main-menu {
   display: block;
-  width: unset;
 }
+
+@media (min-width: 577px) {
+ .menu-block_from-hidden .main-menu {
+  width: unset;
+} 
+}
+
 @media (max-width: 576px) {
+  .menu-block_from-hidden .main-menu {
+  width: calc(100%-35px);
+} 
 }
 .menu-block_from-hidden .main-menu__items {
   display: flex;
-  max-width: 800px;
+
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: flex-start;
@@ -549,13 +558,17 @@
 @media (min-width: 577px) {
   .menu-block_from-hidden .main-menu__items {
     flex-direction: row;
+      max-width: 800px;
   }
 }
-.menu-block_from-hidden .main-menu__item {
+
+.menu-block_from-hidden .main-menu__item { 
   position: static;
   flex-basis: 25%;
   margin-bottom: 30px;
 }
+
+
 .menu-block_from-hidden .main-menu__item a {
   font-family: Bebas Neue;
   text-transform: uppercase;
@@ -576,9 +589,10 @@
 }
 @media (max-width: 576px) {
   .menu-block_from-hidden .main-menu__item {
-    flex-basis: 34%;
+/*     flex-basis: 34%; */
     margin-bottom: 35px;
-    margin-right: 68px;
+    width: 45%;
+/*     margin-right: 68px; */
   }
 }
 @media (min-width: 577px) {
