--- a/exelente_ru/css/header.css
+++ b/exelente_ru/css/header.css
@@ -405,7 +405,7 @@
   top: 0;
   z-index: 100;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: #ffffff;
 }
 .menu-block_from-hidden .wrapper {
