--- a/exelente_ru/css/school-page.css
+++ b/exelente_ru/css/school-page.css
@@ -109,7 +109,7 @@
 .programs__submit {
   display: block;
   width: 200px;
-  margin: 38px auto 45px;
+  margin: 38px 16% 45px;
   padding: 13px 0;
   font-family: Bebas Neue;
   font-size: 18px;
