--- a/exelente_ru/css/school-page.css
+++ b/exelente_ru/css/school-page.css
@@ -5,6 +5,13 @@
   color: #DF5E16;
   text-transform: uppercase;
 }
+@media (min-width: 577px) {
+  .h2-title {
+    padding-top: 40px;
+    padding-bottom: 36px;
+    font-size: 36px;
+  }
+}
 .images {
   position: relative;
   min-height: 540px;
@@ -24,6 +31,12 @@
   height: 100%;
   background: rgba(0, 67, 145, 0.4);
 }
+@media (min-width: 577px) {
+  .images {
+    margin-top: 0px;
+    background-position-x: 0;
+  }
+}
 .images__wrapper {
   position: relative;
   z-index: 1;
@@ -33,8 +46,23 @@
   padding-left: 15px;
   padding-bottom: 125px;
 }
+@media (min-width: 577px) {
+  .images__wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 30px;
+    padding-top: 32px;
+  }
+}
 .images__site-path {
   position: static;
+}
+@media (min-width: 577px) {
+  .images__title {
+    margin-top: 162px;
+    margin-left: 80px;
+    font-size: 72px;
+  }
 }
 .information {
   background-color: #ffffff;
@@ -44,20 +72,57 @@
   margin: 0 5%;
   padding-bottom: 14%;
 }
+@media (min-width: 577px) {
+  .information__wrapper {
+    padding-top: 60px;
+    padding-bottom: 30px;
+    max-width: 1020px;
+    margin: 0 auto;
+  }
+}
 .information__text {
   margin-top: 10%;
-  padding-bottom: 3%;
+  margin-bottom: 30px;
   font-size: 14px;
   line-height: 1.5;
   color: #000000;
 }
+@media (min-width: 577px) {
+  .information__text {
+    margin-top: 0;
+    margin-bottom: 21px;
+    line-height: 20px;
+  }
+}
 .programs {
   margin: 0 5%;
+}
+@media (min-width: 577px) {
+  .programs__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1020px;
+    margin: 0 auto;
+    padding-bottom: 86px;
+  }
+}
+@media (min-width: 577px) {
+  .programs__title {
+    width: 100%;
+    padding-bottom: 30px;
+  }
 }
 .programs__list {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
+}
+@media (min-width: 577px) {
+  .programs__list {
+    width: 228px;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
 .programs__list-item {
   margin-top: 34px;
@@ -67,12 +132,48 @@
   color: #004391;
   text-transform: uppercase;
 }
+@media (min-width: 577px) {
+  .programs__list-item:hover {
+    cursor: pointer;
+  }
+}
+@media (min-width: 577px) {
+  .programs__list-item {
+    flex: 1;
+    margin: 0;
+    padding-left: 20px;
+    padding-top: 19px;
+    color: #828282;
+    border: 2px solid #E2E2E2;
+    border-right: none;
+  }
+  .programs__list-item:not(:first-child) {
+    border-top-width: 0.5px;
+  }
+}
 .programs__list-item_active {
   text-decoration: underline;
   color: #DF5E16;
 }
+@media (min-width: 577px) {
+  .programs__list-item_active {
+    color: #004391;
+    border: 2px solid #004391;
+    border-right: none;
+  }
+  .programs__list-item_active:not(:first-child) {
+    border-top-width: 2px;
+  }
+}
 .programs__info {
   position: relative;
+}
+@media (min-width: 577px) {
+  .programs__info {
+    flex: 1;
+    padding: 0px 41px;
+    border: 2px solid #004391;
+  }
 }
 .programs__info-item {
   position: absolute;
@@ -97,14 +198,32 @@
   color: #004391;
   text-transform: capitalize;
 }
+@media (min-width: 577px) {
+  .programs__subtitle {
+    margin-top: 54px;
+    font-size: 14px;
+  }
+}
 .programs__sublist {
   margin-top: 15px;
   list-style-position: inside;
+}
+@media (min-width: 577px) {
+  .programs__sublist {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 .programs__sublist-item {
   font-size: 14px;
   line-height: 2;
   color: #000000;
+}
+@media (min-width: 577px) {
+  .programs__sublist-item {
+    width: 50%;
+    line-height: 2.8;
+  }
 }
 .programs__button {
   margin: 38px auto 45px;
@@ -119,4 +238,10 @@
   letter-spacing: 4px;
   color: #FFFFFF;
   text-transform: uppercase;
+}
+@media (min-width: 577px) {
+  .programs__button {
+    margin: 32px 0 37px;
+    text-align: left;
+  }
 }
