--- a/exelente_ru/css/password-restore.css
+++ b/exelente_ru/css/password-restore.css
@@ -27,7 +27,7 @@ a {
 	.restore__wrapper {
 		margin: 0;
 		padding-top: 94px;
-		padding-bottom: 36px;
+		padding-bottom: 32px;
 	}
 }
 .site-path {
@@ -192,6 +192,7 @@ a {
 	font-size: 16px;
 	font-style: italic;
 	color: #000000;
+	border-radius: 0;
 	outline: 1px solid #004391;
 }
 @media (max-width: 576px) {
@@ -199,6 +200,7 @@ a {
 		padding: 0 10px;
 		max-width: 280px;
 		height: 45px;
+		border-radius: 0;
 		outline: 1px solid #004391;
 	}
 }
@@ -289,6 +291,7 @@ a {
   padding: 0 10px;
   max-width: 280px;
   height: 38px;
+  border-radius: 0;
   outline: 1px solid #004391;
 }
 @media (max-width: 576px) {
@@ -298,6 +301,7 @@ a {
 		padding: 0 10px;
 		max-width: 280px;
 		height: 45px;
+		border-radius: 0;
 		outline: 1px solid #004391;
 	}
 }
@@ -323,7 +327,7 @@ a {
 }
 @media (max-width: 576px) {
 	.button-action__save-password {
-		margin: 5px auto 32px;
+		margin: 5px auto 36px;
 		padding: 16px 0;
 		font-size: 17px;
 		letter-spacing: 4.4px;
