--- a/exelente_ru/css/content_weworking.css
+++ b/exelente_ru/css/content_weworking.css
@@ -1,3 +1,6 @@
+.content-weworking-photozone {
+  display: none;
+}
 .content-weworking {
   position: relative;
   margin: 0 auto;
@@ -7,6 +10,7 @@
   width: 100%;
 }
 .content-weworking .content-weworking__title {
+  position: relative;
   text-align: center;
   text-transform: uppercase;
   font-family: Bebas Neue;
@@ -32,6 +36,15 @@
   position: relative;
   width: 100%;
 }
+.content-weworking .content-weworking-item .content-weworking-item-text .content-weworking-item-text-ulist .content-weworking-item-text-ulist-img {
+  position: absolute;
+  width: auto;
+  height: auto;
+  top: -20px;
+  display: block;
+  float: left;
+  background-position: center;
+}
 .content-weworking .content-weworking-item .content-weworking-item-text .content-weworking-item-text-ulist .content-weworking-item-text-ulist__list {
   display: flex;
   flex-flow: row nowrap;
@@ -45,13 +58,6 @@
   margin-bottom: 0px;
   margin-left: 100px;
   margin-top: 2px;
-}
-.content-weworking .content-weworking-item .content-weworking-item-text .content-weworking-item-text-ulist .content-weworking-item-text-ulist__list::before {
-  position: absolute;
-  content: "";
-  background-size: cover;
-  display: block;
-  left: 0;
 }
 .content-weworking .content-weworking-item .content-weworking-item-text .content-weworking-item-text-ulist .content-weworking-item-text-ulist__list--open {
   cursor: pointer;
@@ -80,28 +86,66 @@
   margin-bottom: 0;
   margin-top: 0;
 }
-.content-weworking .content-weworking-item-1 .content-weworking-item-1-text .content-weworking-item-1-text-ulist .content-weworking-item-1-text-ulist__list::before {
-  background-image: url(../img/slider_content/conversation.png);
-  width: 70px;
-  height: 69px;
-}
-.content-weworking .content-weworking-item-2 .content-weworking-item-2-text .content-weworking-item-2-text-ulist .content-weworking-item-2-text-ulist__list::before {
-  background-image: url(../img/slider_content/wallet.png);
-  width: 58.8px;
-  height: 58.8px;
-}
-.content-weworking .content-weworking-item-3 .content-weworking-item-3-text .content-weworking-item-3-text-ulist .content-weworking-item-3-text-ulist__list::before {
-  background-image: url(../img/slider_content/search.png);
-  width: 41.65px;
-  height: 49.39px;
-}
-.content-weworking .content-weworking-item-4 .content-weworking-item-4-text .content-weworking-item-4-text-ulist .content-weworking-item-4-text-ulist__list::before {
-  background-image: url(../img/slider_content/docs.png);
-  width: 49.56px;
-  height: 53.34px;
-}
-.content-weworking .content-weworking-item-5 .content-weworking-item-5-text .content-weworking-item-5-text-ulist .content-weworking-item-5-text-ulist__list::before {
-  background-image: url(../img/slider_content/kurator.png);
-  width: 59.39px;
-  height: 55.61px;
+@media (min-width: 576px) {
+  .content-wework {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    max-width: 1280px;
+    margin: 40px auto;
+    width: 100%;
+    padding: 0 50px;
+  }
+  .content-wework .content-weworking,
+  .content-wework .content-weworking-photozone {
+    width: 50%;
+    padding: 0;
+    margin: 0;
+  }
+  .content-wework .content-weworking-photozone {
+    display: block;
+    height: 907px;
+  }
+  .content-wework .content-weworking-photozone .content-weworking-photozone-photo {
+    width: 100%;
+    height: 100%;
+    background-image: url(../img/slider_content/weworking1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .content-wework .content-weworking .content-weworking__title {
+    font-size: 48px;
+    text-align: left;
+    margin-top: 40px;
+  }
+  .content-wework .content-weworking .content-weworking-item {
+    padding: 30px 15px;
+    padding-left: 40px;
+    padding-right: 49px;
+  }
+  .content-wework .content-weworking .content-weworking-item .content-weworking-item-text-ulist {
+    position: relative;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+  }
+  .content-wework .content-weworking .content-weworking-item .content-weworking-item-text-ulist .content-weworking-item-text-ulist__list {
+    font-size: 24px;
+  }
+  .content-wework .content-weworking .content-weworking-item .content-weworking-item-text-ulist .content-weworking-item-text-ulist__list--open {
+    position: relative;
+    top: auto;
+    right: -20px;
+  }
+  .content-wework .content-weworking .content-weworking-item .content-weworking-item-text-ulist__list-desc {
+    display: none;
+    margin-left: 100px;
+    font-size: 14px;
+    font-weight: normal;
+    color: #FFFFFF;
+    margin-top: 50px;
+    line-height: 20px;
+  }
 }
