--- a/exelenteRu/css/password-restore.css
+++ b/exelenteRu/css/password-restore.css
@@ -2,6 +2,7 @@ a {
 	text-decoration: none;
 	color: #FFFFFF;
 }
+
 .restore {
 	position: relative;
 	width: 100%;
@@ -11,6 +12,7 @@ a {
 	flex-direction: column;
 	margin: 0 auto;
 }
+
 @media (max-width: 576px) {
 	.restore {
 		max-width: 280px;
@@ -18,11 +20,13 @@ a {
 		margin: 0 auto;
 	}
 }
+
 .restore__wrapper {
 	margin-top: 130px;
 	margin-left: 128px;
 	margin-bottom: 70px;
 }
+
 @media (max-width: 576px) {
 	.restore__wrapper {
 		margin: 0;
@@ -30,24 +34,29 @@ a {
 		padding-bottom: 32px;
 	}
 }
+
 .site-path {
 	position: absolute;
 	top: 24px;
-  	left: 49px;
+	left: 49px;
 	z-index: 3;
 }
+
 @media (max-width: 576px) {
 	.site-path {
 		display: none;
 	}
 }
+
 .site-path__items {
 	display: flex;
 }
+
 .site-path__item {
 	list-style: none;
 	color: #000000;
 }
+
 .site-path__item a {
 	font-family: Open Sans;
 	font-size: 14px;
@@ -55,23 +64,28 @@ a {
 	text-decoration: none;
 	text-transform: lowercase;
 }
+
 .site-path__item a:hover {
 	text-decoration: underline;
 }
+
 .site-path__item:not(:first-child)::before {
 	margin: 0 14px;
 	content: "\2000 \203a \2000";
 }
+
 .restore-title__wrapper {
 	display: flex;
 	justify-content: space-between;
 	max-width: 309px;
 }
+
 @media (max-width: 576px) {
 	.restore-title__wrapper {
 		flex-direction: column;
 	}
 }
+
 .restore__title {
 	margin: 0;
 	font-family: Bebas Neue;
@@ -80,6 +94,7 @@ a {
 	letter-spacing: 0.3px;
 	color: #DF5E16;
 }
+
 @media (max-width: 576px) {
 	.restore__title {
 		margin: 0;
@@ -91,21 +106,25 @@ a {
 		color: #DF5E16;
 	}
 }
+
 .restore__subtitle {
 	font-family: Bebas Neue;
 	font-size: 24px;
 	color: #828282;
 }
+
 @media (max-width: 576px) {
 	.restore__subtitle {
 		margin: 0;
 		padding-top: 30px;
 	}
 }
+
 .restore-text__wrapper {
 	width: 100%;
 	max-width: 435px;
 }
+
 .step-description {
 	padding-top: 38px;
 	font-family: Open Sans;
@@ -114,6 +133,7 @@ a {
 	letter-spacing: -0.45px;
 	color: #1D1B20;
 }
+
 @media (max-width: 576px) {
 	.step-description {
 		max-width: 259px;
@@ -122,6 +142,7 @@ a {
 		letter-spacing: 0.8px;
 	}
 }
+
 .confidence-policy {
 	padding-top: 17px;
 	max-width: 318px;
@@ -130,6 +151,7 @@ a {
 	color: #1D1B20;
 	letter-spacing: -0.6px;
 }
+
 @media (max-width: 576px) {
 	.confidence-policy {
 		padding-top: 26px;
@@ -141,25 +163,31 @@ a {
 		letter-spacing: 0;
 	}
 }
+
 .confidence-policy__link {
 	font-family: Open Sans;
 	font-size: 13px;
 	color: #DF5E16;
 }
+
 @media (max-width: 576px) {
 	.confidence-policy__link {
 		font-size: 14px;
 		letter-spacing: -0.1px;
 	}
 }
+
 .confidence-policy__link:hover {
 	text-decoration: underline;
 }
+
 .reset__form {
+	position: relative;
 	display: flex;
 	max-width: 227px;
 	flex-direction: column;
 }
+
 @media (max-width: 576px) {
 	.reset__form {
 		display: flex;
@@ -169,6 +197,7 @@ a {
 		flex-direction: column;
 	}
 }
+
 .e-mail__title {
 	margin: 0;
 	padding-top: 35px;
@@ -178,12 +207,14 @@ a {
 	font-weight: 900;
 	color: #004391;
 }
+
 @media (max-width: 576px) {
 	.e-mail__title {
 		padding-top: 45px;
 		padding-bottom: 6px;
 	}
 }
+
 .e-mail__field {
 	padding: 0 10px;
 	max-width: 280px;
@@ -195,6 +226,7 @@ a {
 	border-radius: 0;
 	outline: 1px solid #004391;
 }
+
 @media (max-width: 576px) {
 	.e-mail__field {
 		padding: 0 10px;
@@ -204,6 +236,7 @@ a {
 		outline: 1px solid #004391;
 	}
 }
+
 .button-action__reset-password {
 	width: 100%;
 	max-width: 280px;
@@ -221,9 +254,11 @@ a {
 	letter-spacing: 3.5px;
 	cursor: pointer;
 }
+
 .button-action__reset-password:hover {
 	background: #F58A4E;
 }
+
 @media (max-width: 576px) {
 	.button-action__reset-password {
 		margin: 32px 0;
@@ -233,6 +268,7 @@ a {
 }
 
 /*Стили для второго шага*/
+
 .confidence-policy-2 {
 	padding-top: 17px;
 	max-width: 318px;
@@ -241,6 +277,7 @@ a {
 	color: #1D1B20;
 	letter-spacing: -0.6px;
 }
+
 @media (max-width: 576px) {
 	.confidence-policy-2 {
 		padding-top: 35px;
@@ -252,12 +289,14 @@ a {
 		letter-spacing: 0;
 	}
 }
+
 .restore__form {
 	display: flex;
 	max-width: 226px;
 	padding-top: 37px;
 	flex-direction: column;
 }
+
 @media (max-width: 576px) {
 	.restore__form {
 		display: flex;
@@ -266,14 +305,16 @@ a {
 		flex-direction: column;
 	}
 }
+
 .new-password__title,
 .new-password-repeat__title {
-  margin-bottom: 5px;
-  font-family: Open Sans;
-  font-size: 15px;
-  font-weight: 900;
-  color: #004391;
+	margin-bottom: 5px;
+	font-family: Open Sans;
+	font-size: 15px;
+	font-weight: 900;
+	color: #004391;
 }
+
 @media (max-width: 576px) {
 	.new-password__title,
 	.new-password-repeat__title {
@@ -285,15 +326,17 @@ a {
 		letter-spacing: 1.4px;
 	}
 }
+
 .new-password__field,
 .new-password-repeat__field {
-  margin-bottom: 25px;
-  padding: 0 10px;
-  max-width: 280px;
-  height: 38px;
-  border-radius: 0;
-  outline: 1px solid #004391;
+	margin-bottom: 25px;
+	padding: 0 10px;
+	max-width: 280px;
+	height: 38px;
+	border-radius: 0;
+	outline: 1px solid #004391;
 }
+
 @media (max-width: 576px) {
 	.new-password__field,
 	.new-password-repeat__field {
@@ -305,6 +348,7 @@ a {
 		outline: 1px solid #004391;
 	}
 }
+
 .button-action__save-password {
 	width: 100%;
 	max-width: 280px;
@@ -322,9 +366,11 @@ a {
 	letter-spacing: 3px;
 	cursor: pointer;
 }
+
 .button-action__save-password:hover {
 	background: #F58A4E;
 }
+
 @media (max-width: 576px) {
 	.button-action__save-password {
 		margin: 5px auto 36px;
@@ -335,6 +381,7 @@ a {
 }
 
 /*Стили успешной смены пароля*/
+
 .step-description-3 {
 	max-width: 347px;
 	padding-top: 40px;
@@ -344,6 +391,7 @@ a {
 	letter-spacing: 0;
 	color: #1D1B20;
 }
+
 @media (max-width: 576px) {
 	.step-description-3 {
 		max-width: 273px;
@@ -355,16 +403,19 @@ a {
 		color: #1D1B20;
 	}
 }
+
 .log-in__wrapper {
 	width: 100%;
 	padding: 60px 0 84px 0;
 }
+
 @media (max-width: 576px) {
 	.log-in__wrapper {
 		width: 100%;
 		padding: 76px 0 51px 0;
 	}
 }
+
 .button-action__log-in {
 	max-width: 280px;
 	margin-bottom: 0;
@@ -380,14 +431,32 @@ a {
 	letter-spacing: 4px;
 	cursor: pointer;
 }
+
 .button-action__log-in:hover {
 	background: #F58A4E;
 }
+
 @media (max-width: 576px) {
 	.button-action__log-in {
 		max-width: 280px;
 		padding: 14px 25px;
 		font-size: 18px;
 		letter-spacing: 3.7px;
+	}
+}
+
+.e-mail__error {
+	display: none;
+	position: absolute;
+	top: 100px;
+	font-style: italic;
+	letter-spacing: -0.7px;
+	font-size: 12px;
+	color: #C82E2E;
+}
+
+@media (max-width: 576px) {
+	.e-mail__error {
+		top: 120px;
 	}
 }
