--- a/exelenteRu/css/style.css
+++ b/exelenteRu/css/style.css
@@ -7,6 +7,7 @@
   src: url('../fonts/BebasNeue/BebasNeueRegular.eot?#iefix') format("embedded-opentype"),
        url('../fonts/BebasNeue/BebasNeueRegular.woff') format("woff"),
        url('../fonts/BebasNeue/BebasNeueRegular.ttf') format("truetype");
+  font-weight: normal;
 }
 @font-face {
   font-family: 'Bebas Neue';
