--- a/exelenteRu/css/slider.css
+++ b/exelenteRu/css/slider.css
@@ -198,8 +198,11 @@
   .slider-navigation {
     width: 67px;
     height: 114px;
-    padding-top: 4px;
     background-color: #004391;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 9px 10px 1px;
   }
 }
 @media (max-width: 576px) {
@@ -215,7 +218,6 @@
 }
 @media (min-width: 577px) {
   .slider-navigation__count {
-    margin: 9px;
     text-align: center;
     font-family: Bebas Neue;
     font-size: 24px;
@@ -290,7 +292,9 @@
     border: 2px solid #FFFFFF;
   }
 }
-.slider-navigation__fill {
-  flex: 1;
-  order: -1;
+@media (max-width: 576px) {
+  .slider-navigation__fill {
+    flex: 1;
+    order: -1;
+  }
 }
